feat: add persistent state checkbox
Signed-off-by: Yi-Ya Chen <yiya.chen@suse.com>
(cherry picked from commit e8017e14c843f175aa7c064aeeb18a9333f49a05)

--- a/pkg/harvester/l10n/en-us.yaml
+++ b/pkg/harvester/l10n/en-us.yaml
@@ -594,6 +594,7 @@ harvester:
     enableUsb: Enable USB Tablet
     advancedOptions:
       tpm: Enable TPM
+      persistentState: Persistent State
       cpuManager:
         prefix: You must enable CPU Manager for at least one node in
         middle: 'host page'
