--- a/pkg/harvester/l10n/en-us.yaml
+++ b/pkg/harvester/l10n/en-us.yaml
@@ -365,7 +365,7 @@ harvester:
 
   dashboard:
     label: Dashboard
-    header: "Harvester Cluster: {cluster}"
+    header: "Harvester Cluster zzz: {cluster}"
     hardwareResourceGauge:
       cpu: CPU
       memory: Memory
