feat: add namespace field
Signed-off-by: Yi-Ya Chen <yiya.chen@suse.com>

--- a/pkg/harvester/l10n/en-us.yaml
+++ b/pkg/harvester/l10n/en-us.yaml
@@ -136,6 +136,9 @@ harvester:
       delete: Delete
     bundle:
       title: Generate a Support Bundle
+      namespace:
+        selectAll: 'Select All'
+        unselectAll: 'Unselect All'
       url: Issue URL
       description: Description
       requiredDesc: Description is required!
