feat: map annotation
Signed-off-by: Yi-Ya Chen <yiya.chen@suse.com>

--- a/pkg/harvester/l10n/en-us.yaml
+++ b/pkg/harvester/l10n/en-us.yaml
@@ -229,6 +229,8 @@ harvester:
           {count, plural,
           =1 {core}
           other {cores}}
+    harvesterIpAddress:
+      customIpTooltip: "Custom IP (set via annotation)"
   tableHeaders:
     imageEncryption: Encryption
     size: Size
