--- a/pkg/harvester/l10n/en-us.yaml
+++ b/pkg/harvester/l10n/en-us.yaml
@@ -229,6 +229,8 @@ harvester:
           {count, plural,
           =1 {core}
           other {cores}}
+    harvesterIpAddress:
+      customIpTooltip: "Custom IP (set via annotation)"
   tableHeaders:
     imageEncryption: Encryption
     size: Size
@@ -276,6 +278,7 @@ harvester:
     quotas: Quotas
     snapshots: Snapshots
     instanceLabel: Instance Labels
+    annotations: Annotations
   fields:
     version: Version
     name: Name
@@ -792,6 +795,8 @@ harvester:
       banner: These labels are automatically synchronized to the virtual machine instance.
     labels:
       banner: These key values are added as labels to the virtual machine.
+    annotations:
+      banner: These key values are added as annotations to the virtual machine.
 
   volume:
     label: Volumes
