Add searchbox in settings page (#338)
* Add searchbox in setting page

Signed-off-by: Andy Lee <andy.lee@suse.com>

* update based on comment

Signed-off-by: Andy Lee <andy.lee@suse.com>

* PR feedback

Signed-off-by: Andy Lee <andy.lee@suse.com>

---------

Signed-off-by: Andy Lee <andy.lee@suse.com>

--- a/pkg/harvester/l10n/en-us.yaml
+++ b/pkg/harvester/l10n/en-us.yaml
@@ -1041,6 +1041,7 @@ harvester:
       accessKeyId: Specify your access key ID
       secretAccessKey: Specify your secret access key
       cert: Upload a self-signed SSL certificate
+    noSearchMatch: No settings match your search.
     vlanChangeTip: The newly modified default network interface only applies to newly added nodes, not existing ones.
     defaultPhysicalNIC: Default Network Interface
     modifiedMessage: Settings that have been customized from default settings are tagged with 'Modified'.
