--- a/pkg/harvester/l10n/en-us.yaml
+++ b/pkg/harvester/l10n/en-us.yaml
@@ -1,5 +1,5 @@
 generic:
-  tip: Tip
+  tip: Test test Tip
   resourceExternalLinkTips: 'External Link'
   namespace: Namespace
   notReady: Not Ready
