feat: invalid json error message
Signed-off-by: Yi-Ya Chen <yiya.chen@suse.com>

--- a/pkg/harvester/l10n/en-us.yaml
+++ b/pkg/harvester/l10n/en-us.yaml
@@ -1101,6 +1101,7 @@ harvester:
     csiOnlineExpandValidation:
       provisioner: Provisioner
       value: Value
+      invalidJsonFormat: "Configuration value is not a valid JSON format: {error}"
     containerdRegistry:
       mirrors:
         mirrors: Mirrors
