feat: handle API errors
Signed-off-by: Yi-Ya Chen <yiya.chen@suse.com>

--- a/pkg/harvester/l10n/en-us.yaml
+++ b/pkg/harvester/l10n/en-us.yaml
@@ -1102,6 +1102,7 @@ harvester:
       provisioner: Provisioner
       value: Value
       invalidJsonFormat: "Configuration value is not a valid JSON format: {error}"
+      failedToLoadDrivers: "Failed to load CSI drivers. Error: {error}"
     containerdRegistry:
       mirrors:
         mirrors: Mirrors
